# CFT-TestTask

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini
auth-service/: .dockerignore  Dockerfile  main.py  pyproject.toml
auth-service/auth_app/: app.py  dependencies.py  models.py
auth-service/auth_app/dbase/: connection.py  orm.py  session.py
auth-service/auth_app/dbase/dal/: base.py  salary.py  token_.py  user.py
auth-service/auth_app/routers/: auth.py  salary.py  user.py
auth-service/tests/: conftest.py
auth-service/tests/dbase/dal/: helpers.py  test_base.py  test_salary.py  test_token.py  test_user.py
auth-service/tests/routers/: helpers.py  test_auth.py  test_ping.py  test_salary.py  test_user.py
dbase-service/: postgres.sql
