[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["Michael <mihail.tchernov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
flake8 = "^6.0.0"
flake8-quotes = "^3.3.2"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
flake8-dunder-all = "^0.3.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pyhamcrest = "^2.0.4"
isort = "^5.12.0"
pre-commit = "^3.3.2"
fastapi = "^0.95.2"
pydantic = "^1.10.8"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
